Fix blue screen on mobile

--- a/src/containers/departureBoard/styles.scss
+++ b/src/containers/departureBoard/styles.scss
@@ -81,9 +81,7 @@
 
 @media (max-width: 480px) {
     .departure-tiles {
-        display: flex;
-        flex-direction: column;
-        overflow: auto;
+        display: block;
     }
 
     .departure-board {
